2006-07-02  Abel Cheung  <abel@oaka.org>

	* tw2hk.pl: Accumulated addition of words.

2006-01-09  Abel Cheung  <maddog@linuxhall.org>

	* tw2hk.pl: Modify according to suggestion from
	Liao Chao-Hsiung <pesder AT gmail.com>

2005-12-29  Abel Cheung  <maddog@linuxhall.org>

	* tw2hk.pl: Add more keyword, fix problem where some
	words are not converted.

2005-12-27  Abel Cheung  <maddog@linuxhall.org>

	* zh_HK/tw2hk.pl: add more keywords for conversion.

2005-12-18  Abel Cheung  <maddog@linuxhall.org>

	* zh_HK/tw2hk.pl: add new file, for translating Taiwan word
	flavor to Hong Kong word flavor.
