@@ -1,3 +1,8 @@
+2006-07-30  Abel Cheung  <abel@oaka.org>
+
+	* tw2hk.pl: Do what msgmerge --no-wrap does before conversion.
+	Some little amendments of words conversion table as well.
+
 2006-07-02  Abel Cheung  <abel@oaka.org>
 
 	* tw2hk.pl: Accumulated addition of words.
